<?xml version="1.0"?>
<package format="2">
    <name>imgui_catkin</name>
    <version>0.0.0</version>
    <description>The imgui_catkin package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
    </export>
</package>